Cleaning up code

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,8 @@
-.showForm {
+.showItem {
     visibility: visible;
     position: sticky;   
 }
-.hideForm {
+.hideItem {
     visibility: hidden;
     position: fixed;
 }
